Modificações no visual das telas de cadastro, login, e inicial

--- a/strayhero/src/app/components/barra-equilibrio/barra-equilibrio.component.html
+++ b/strayhero/src/app/components/barra-equilibrio/barra-equilibrio.component.html
@@ -1,7 +1,7 @@
 <div class="container">
 
   <div class="container__recursos">
-      <img src="../../../assets/recurso.png">
+      <img src="../../../assets/recursos.png">
       <div class="container__recursos__nome">Recursos</div>
   </div>
 
@@ -24,7 +24,7 @@
   
 
   <div class="container__cuidados">
-    <img src="../../../assets/população.png">
+    <img src="../../../assets/populacao.png">
     <div class="container__cuidados__nome">Cuidados</div>
   </div>
 
