--- a/strayhero/src/app/components/cadastro-form/cadastro-form.component.html
+++ b/strayhero/src/app/components/cadastro-form/cadastro-form.component.html
@@ -1,15 +1,16 @@
 <form class="form">
   <h3 class="form__title">CADASTRO</h3>
-  <div class="form__label">Email</div><br>
+  <div class="form__label">EMAIL</div><br>
   <input class="form__input {{cl_email}}" type="email" placeholder="email@email.com" value="{{v_email}}" (focus)="cl_email = ''" #email><br>
-  <div class="form__label">Nome de Usuário</div><br>
+  <div class="form__label">NOME DE USUÁRIO</div><br>
   <input class="form__input {{cl_nome}}" type="text" placeholder="Usuário" value="{{v_nome}}" (focus)="cl_nome = ''" #username><br>
-  <div class="form__label">Senha</div><br>
+  <div class="form__label">SENHA</div><br>
   <input class="form__input {{cl_senha1}}" type="password" placeholder="Digite a senha" (focus)="cl_senha1 = ''" #pass1><br>
-  <div class="form__label">Repita a Senha</div><br>
+  <div class="form__label">REPITA A SENHA</div><br>
   <input class="form__input {{cl_senha2}}" type="password" placeholder="Repita a senha" (focus)="cl_senha2 = ''" #pass2><br>
   <button class="botao__primario mr-10 mt-20 mb-20" (click)="enviar(criarObj(email.value, username.value, pass1.value, pass2.value)); $event.preventDefault()">CADASTRAR</button>
   <!-- [routerLink]="['/login']" routerLinkActive="router-link-active" -->  <!-- ALTERAR ISSO AQUI DEPOIS -->
   <button class="botao__secundario mt-20 mb-20" >CANCELAR</button>
+  <br>
+  <a class="form__botao__jaCadastrado" [routerLink]="['/login']" routerLinkActive="router-link-active" >JÁ SOU CADASTRADO</a>
 </form>
-<a [routerLink]="['/login']" routerLinkActive="router-link-active" >Já sou cadastrado!</a>
