--- a/strayhero/src/app/components/feedback-acao-usuario/feedback-acao-usuario.component.scss
+++ b/strayhero/src/app/components/feedback-acao-usuario/feedback-acao-usuario.component.scss
@@ -25,9 +25,10 @@ $laranja: rgb(255,108,0);
     z-index: 1;
     
     .feedback__texto{
-        font-family: Boogaloo;
-        font-size: 25px;
-        color: $verde;
+        font-family: Bonk;
+        font-size: 28px;
+        color: #48db42;
+        letter-spacing: 1px;
         
 
     }
