--- a/strayhero/src/app/components/tela-cadastro/tela-cadastro.component.scss
+++ b/strayhero/src/app/components/tela-cadastro/tela-cadastro.component.scss
@@ -1,6 +1,6 @@
 .background{
     height: 667px;
-    background-image: url('../../../assets/background1.png');
+    background-color: #e5e5e5;
 }
 
 .container{
