--- a/strayhero/src/app/components/tela-login/tela-login.component.html
+++ b/strayhero/src/app/components/tela-login/tela-login.component.html
@@ -1,8 +1,7 @@
 <div class="background">
   <div class="container">
-    <div class="gambiarra"></div>
-    <app-caixa-dialogo2></app-caixa-dialogo2>
+    <!-- <div class="gambiarra"></div> -->
+    <app-caixa-dialogo1></app-caixa-dialogo1>
     <app-login-form></app-login-form>
-    <!-- <app-cadastro-form></app-cadastro-form> -->
   </div>
 </div>
