--- a/strayhero/src/app/components/caixa-dialogo1/caixa-dialogo1.component.html
+++ b/strayhero/src/app/components/caixa-dialogo1/caixa-dialogo1.component.html
@@ -1,5 +1,5 @@
 <div class="dialogo1">
-  <img src="../../../assets/cachorro1.png" alt="Cachorrinho feliz com fundo rosa." class="dialogo1__img">
+  <img src="../../../assets/dog-cadastro.png" alt="Cachorrinho feliz com fundo rosa." class="dialogo1__img">
   <div class="dialogo1__textcontainer">
     <p class="dialogo1__textcontainer__text">"Que bom que você<br>vai me adotar!"</p>
   </div>
