--- a/strayhero/src/app/components/caixa-dialogo1/caixa-dialogo1.component.scss
+++ b/strayhero/src/app/components/caixa-dialogo1/caixa-dialogo1.component.scss
@@ -1,3 +1,30 @@
+$Rosa1: #fa005f;
+$RosaSombra: #DE003D;
+
+$Vermelho1: #F32E2E;
+$Vermelho2: #DF0F0F;
+$Vermelho3: #FDACA9;
+
+$Amarelo1: #fae900;
+$AmareloBalão: #FFBE00;
+
+$Laranja1: #F56800;
+$LaranjaSombra: #E86300;
+
+$Azul1: #00e0ff;
+$Azul2: #390be3;
+$Azul3: #11438a;
+$Azul4: #00418D;
+$AzulHover: #B6CAD8;
+
+$Verde2: #a1c21d;
+$Verde1: #92C400;
+
+$Preto: #000000;
+$Branco: #ffffff;
+$Cinza: #222222;
+
+
 @keyframes animacao-dialogo1{
     0%{
         transform: rotateZ(0%);
@@ -18,6 +45,15 @@
     height: 90px;
     margin: auto;
 
+    // .container{
+
+    //     background-color: #1759b1;
+    //     width: 50px;
+    //     height: 50px;
+    //     border-radius: 50px 25px 45px 25px;
+    //     position: absolute;
+    //     z-index: 2;
+
     .dialogo1__img{
         position: absolute;
         width: 85px;
@@ -26,23 +62,28 @@
         animation: animacao-dialogo1 2s infinite;
     }
 
+    // }
+
+    
+
     .dialogo1__textcontainer{
         position: absolute;
         width: 270px;
         height: 70px;
-        background-color: #f2f2f2;
+        background-color: $AmareloBalão;
         z-index: 1;
         transform: translateY(15px);
-        border: 2px solid #1759b1;
+        border: 2px solid $Laranja1;
         border-radius: 30px 20px 20px 10px;
-        box-shadow: 0px 3px #1759b1;
+        box-shadow: 0px 3px $LaranjaSombra;
     }
 
     .dialogo1__textcontainer__text{
         text-align: center;
-        font-family: Kalan-Regular;
-        font-size: 23px;
+        font-family: Lato-BoldItalic;
+        font-size: 18px;
         line-height: 25px;
-        margin-top: 13px;
+        margin-top: 8px;
+        color: $Azul4;
     }
 }
