--- a/strayhero/src/app/components/login-form/login-form.component.html
+++ b/strayhero/src/app/components/login-form/login-form.component.html
@@ -1,9 +1,11 @@
 <form class="form">
-  <h3 class="form__title">LOGIN</h3>
+  <h3 class="form__title">ENTRAR</h3>
   <div class="form__label">Email</div><br>
   <input class="form__input {{cl_email}}" type="email" placeholder="email@email.com" value="{{v_email}}" (focus)="cl_email = ''" #email><br>
   <div class="form__label">Senha</div><br>
   <input class="form__input {{cl_pass}}" type="password" placeholder="Digite a senha" value="{{v_pass}}" (focus)="cl_pass = ''" #pass><br>
   <button class="botao__primario mr-10 mt-20 mb-20" (click)="enviar(email.value,pass.value); $event.preventDefault()">ENTRAR</button>
   <button class="botao__secundario mt-20 mb-20">CANCELAR</button>
+  <br>
+  <a class="form__botao__esqueciSenha" [routerLink]="" routerLinkActive="router-link-active" >ESQUECI MINHA SENHA</a>
 </form>
