--- a/strayhero/src/app/components/moedas/moedas.component.html
+++ b/strayhero/src/app/components/moedas/moedas.component.html
@@ -1,4 +1,4 @@
 <div class="container">
-    <img src="../../../assets/dinheiro.png">
+    <img src="../../../assets/money.png">
     <div class="container__dinheiro">50</div>
 </div>
