--- a/strayhero/src/styles.scss
+++ b/strayhero/src/styles.scss
@@ -20,55 +20,52 @@
     src: url("./assets/Kalam-Bold.ttf");
   }
 
+  @font-face {
+    font-family: Bonk;
+    src: url("./assets/Bonk.ttf");
+  }
+  @font-face {
+    font-family: Lato-Black;
+    src: url("./assets/Lato/Lato-Black.ttf");
+  }
+  @font-face {
+    font-family: Lato-BlackItalic;
+    src: url("./assets/Lato/Lato-BlackItalic.ttf");
+  }
+  @font-face {
+    font-family: Lato-Bold;
+    src: url("./assets/Lato/Lato-Bold.ttf");
+  }
+  @font-face {
+    font-family:  Lato-BoldItalic;
+    src: url("./assets/Lato/Lato-BoldItalic.ttf");
+  }
+  @font-face {
+    font-family: Lato-Hairline;
+    src: url("./assets/Lato/Lato-Hairline.ttf");
+  }
+  @font-face {
+    font-family: Lato-HairlineItalic;
+    src: url("./assets/Lato/Lato-HairlineItalic.ttf");
+  }
+  @font-face {
+    font-family: Lato-Italic;
+    src: url("./assets/Lato/Lato-Italic.ttf");
+  }
+  @font-face {
+    font-family: Lato-Light;
+    src: url("./assets/Lato/Lato-Light.ttf");
+  }
+  @font-face {
+    font-family: Lato-LightItalic;
+    src: url("./assets/Lato/Lato-LightItalic.ttf");
+  }
+  @font-face {
+    font-family: Lato-Regular;
+    src: url("./assets/Lato/Lato-Regular.ttf");
+  }
+
 *{
     margin: 0;
     padding: 0;
 }
-
-.invisivel{
-    display: none;
-}
-
-.mr-10{
-  margin-right: 10px;
-}
-
-.mt-20{
-  margin-top: 20px;
-}
-
-.mb-20{
-  margin-bottom: 20px;
-}
-
-.ml-10{
-  margin-left: 10px;
-}
-
-.botao__primario{
-  border: 2px solid transparent;
-  border-radius: 15px 10px 20px 15px;
-  background-color: #1759b1;
-  padding: 5px 20px;
-  color: white;
-  font-family: Boogaloo;
-  font-size: 20px;
-  cursor: pointer;
-  outline:0;
-}
-
-.botao__secundario{
-  border: 2px solid rgb(70, 70, 70);
-  border-radius: 15px 10px 20px 15px;
-  background-color: transparent;
-  padding: 5px 20px;
-  color: rgb(70, 70, 70);
-  font-family: Boogaloo;
-  font-size: 20px;
-  cursor: pointer;
-  outline:0;
-}
-
-// body{
-//   background-color: gray;
-// }
