ajuste nas telas de cadastro e login. tornando index dinamico

--- a/strayhero/src/app/components/barra-equilibrio/barra-equilibrio.component.html
+++ b/strayhero/src/app/components/barra-equilibrio/barra-equilibrio.component.html
@@ -12,9 +12,8 @@
             
         </div>
       </div>
-      <div class="container__containerbarra__indicador"></div>
+      <div class="container__containerbarra__indicador {{posicaoBarra}}"></div>
     </div>
-
     
 
     <!-- <div class="barra">
