--- a/strayhero/src/app/components/notificacao/notificacao.component.html
+++ b/strayhero/src/app/components/notificacao/notificacao.component.html
@@ -1,12 +1,10 @@
 <div class="container">
   <div class="container__modal">
     <div class="container__modal__titulo">
-      <span class="container__modal__titulo__texto">TITULO</span>
+      <span class="container__modal__titulo__texto">{{feedbackTitulo}}</span>
     </div>
     <div class="container__modal__corpo">
-      <span class="container__modal__corpo__texto">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis at, beatae fugiat laborum,
-         nemo necessitatibus mollitia, in reiciendis unde dolor aut sapiente rem laboriosam. Dignissimos est id illum quod impedit!
-         nemo necessitatibus mollitia, in reiciendis unde dolor aut sapiente rem laboriosam. Dignissimos est id illum quod impedit!</span>
+      <span class="container__modal__corpo__texto">{{feedbackTexto}}</span>
     </div>
     <div class="container__modal__botoes">
       <button class="container__modal__botoes__ok"> OK </button>
