--- a/strayhero/src/app/components/progresso-usuario/progresso-usuario.component.html
+++ b/strayhero/src/app/components/progresso-usuario/progresso-usuario.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <img src="../../../assets/lapis.png">
-    <div class="container__nivel">Aprendiz</div>
+    <div class="container__nivel">{{titulo}}</div>
     <div class="container__barra">
-      <div class="container__barra__indicador"></div>
+      <div class="container__barra__indicador {{feedbackBarra}}"></div>
     </div>
 </div>
