--- a/strayhero/src/app/components/tela-animais/tela-animais.component.html
+++ b/strayhero/src/app/components/tela-animais/tela-animais.component.html
@@ -2,7 +2,7 @@
 
 <app-progresso-usuario></app-progresso-usuario>
 
-<app-feedback-acao-usuario></app-feedback-acao-usuario>
+<app-feedback-acao-usuario (click)="teste()"></app-feedback-acao-usuario>
 
 <app-moedas></app-moedas>
 
@@ -12,4 +12,4 @@
 
 <app-ambiente></app-ambiente>
 
-<app-notificacao></app-notificacao>
+<app-notificacao *ngIf="feedbackAtivo == true"></app-notificacao>
