--- a/strayhero/src/app/components/ambiente/ambiente.component.scss
+++ b/strayhero/src/app/components/ambiente/ambiente.component.scss
@@ -1,17 +1,17 @@
 .tabela{
-    border: 1px solid black;
+    //border: 1px solid black;
     position: fixed;
 
     // min-width: 100%;
     max-height: 100%;
 
     .tabela__linha{
-        border: 1px solid black;
+        //border: 1px solid black;
         height: 14vh;
         
         
         .tabela__linha__coluna{
-            border: 1px solid black;
+            //border: 1px solid black;
             width: 100vw;
             height: 14vh;
 
