tela de animais encaminhada

--- a/strayhero/src/app/components/ambiente/ambiente.component.scss
+++ b/strayhero/src/app/components/ambiente/ambiente.component.scss
@@ -14,13 +14,15 @@
             //border: 1px solid black;
             width: 100vw;
             height: 14vh;
+            position: relative;
 
-            img{
+
+            /* img{
                 max-width: 74%;
                 max-height: 50%;
                 position: relative;
                 bottom:  -10px;
-            }
+            } */
 
 
         }
