modal dos detalhes do animal e tela para doar para ong adicionados

--- a/strayhero/src/app/components/tela-animais/tela-animais.component.html
+++ b/strayhero/src/app/components/tela-animais/tela-animais.component.html
@@ -12,4 +12,6 @@
 
 <app-ambiente></app-ambiente>
 
-<app-notificacao></app-notificacao>
+<!-- <app-notificacao></app-notificacao> -->
+
+<!-- <app-modal-detalhes-animal></app-modal-detalhes-animal> -->
