tela animal especifico meio pronta

--- a/strayhero/src/app/components/modal-detalhes-animal/modal-detalhes-animal.component.html
+++ b/strayhero/src/app/components/modal-detalhes-animal/modal-detalhes-animal.component.html
@@ -1,26 +1,26 @@
-<div class="container">
+<div class="container" *ngIf="aberto" (click)="fecharModal(overlay)" #overlay>
   <div class="container__modal">
     <img src="../../../assets/animacoes/animação3.gif" alt="" class="container__modal__imagem">
     <!-- <br> -->
-    <div class="container__modal__descricao">
-      <span class="container__modal__descricao__nome">DOUGUINHO</span>
+    <div class="container__modal__descricao"> 
+      <span class="container__modal__descricao__nome">{{nome}}</span>
       <div class="container__modal__descricao__status">
         <div class="container__modal__descricao__status__carinho">
-          <img src="../../../assets/coracao-level.png" alt="" class="container__modal__descricao__status__carinho__imagem">
+          <img src="../../../assets/coracao-level.png" alt="" class="container__modal__descricao__status__carinho__imagem" (click)="darAmor()">
           <div class="container__modal__descricao__status__carinho__barra">
-            <div class="container__modal__descricao__status__carinho__barra__indicador"></div>
+            <div class="container__modal__descricao__status__carinho__barra__indicador {{statusAtencao}}"></div>
           </div>
         </div>
         <div class="container__modal__descricao__status__comida">
-            <img src="../../../assets/comida-level.png" alt="" class="container__modal__descricao__status__comida__imagem">
+            <img src="../../../assets/comida-level.png" alt="" class="container__modal__descricao__status__comida__imagem" (click)="alimentar()">
             <div class="container__modal__descricao__status__comida__barra">
-                <div class="container__modal__descricao__status__comida__barra__indicador"></div>
+                <div class="container__modal__descricao__status__comida__barra__indicador {{statusComida}}"></div>
             </div>
         </div>
         <div class="container__modal__descricao__status__saude">
-            <img src="../../../assets/saude-level.png" alt="" class="container__modal__descricao__status__saude__imagem" >
+            <img src="../../../assets/saude-level.png" alt="" class="container__modal__descricao__status__saude__imagem" (click)="darRemedio()">
             <div class="container__modal__descricao__status__saude__barra">
-                <div class="container__modal__descricao__status__saude__barra__indicador"></div>
+                <div class="container__modal__descricao__status__saude__barra__indicador {{statusSaude}}"></div>
             </div>
         </div>
       </div>
