--- a/strayhero/src/app/components/tela-animais/tela-animais.component.html
+++ b/strayhero/src/app/components/tela-animais/tela-animais.component.html
@@ -16,3 +16,5 @@
 
 <!-- <app-modal-detalhes-animal></app-modal-detalhes-animal> -->
 <app-notificacao *ngIf="feedbackAtivo == true"></app-notificacao>
+
+<app-modal-detalhes-animal></app-modal-detalhes-animal>
